# TrackingShot

./: .gitignore  CMakeLists.txt  README.md  TrackingShot.sln  TrackingShot.vcxproj  TrackingShot.vcxproj.filters  main.cpp
Lib/: Camera.cpp  Camera.h  Consts.h  Shader.cpp  Shader.h  Util.cpp  Util.h
Lib/Datatypes/: Material.cpp  Material.h  Path.cpp  Path.h  PathPoint.cpp  PathPoint.h  Spline.cpp  Spline.h  Squad.cpp  Squad.h
Lib/Math/: Spline.cpp  Spline.h
Lib/Objects/: BoundingBox.cpp  BoundingBox.h  Cube.h  Line.cpp  Line.h  Object.cpp  Object.h  Plane.h  Point.cpp  Point.h  SplittingPlane.h  TriangleObject.h  TriangleThing.h
Lib/World/: Camera.cpp  Camera.h  Input.cpp  Input.h  Light.cpp  Light.h  World.cpp  World.h
OpenGL/glad/: glad.c
OpenGL/include/GLFW/: glfw3.h
OpenGL/include/glad/: glad.h
OpenGL/include/glm/detail/: _features.hpp
OpenGL/include/glm/gtc/: type_ptr.hpp
OpenGL/include/stb-image/: stb_image.h
Shaders/: Shader.cpp  Shader.h  depthMap.frag  depthMap.vert  shader.vert  shadowShader.frag  shadowShader.vert
shaders/: shader.frag
x64/Debug/: TrackingShot.exe.recipe  TrackingShot.ilk  TrackingShot.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Debug/TrackingShot.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TrackingShot.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
